remove bullet,votestext,fixing align of votes in results page

--- a/polls/static/polls/style3.css
+++ b/polls/static/polls/style3.css
@@ -23,6 +23,11 @@
 .icon a{
   margin-left: 300px;
 }
+.al {
+  display: inline-block;
+  width: 140px;
+}
+
 
 .myChart {
   align-self: right;
